# CommandEncoder

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api-reference.md  getting-started.md  index.md
scr/CommandEncoder/: AIbasic.py  Premanage.py  action.py  mapping.py  premanage.py
scr/Debug/: README.md
src/CommandEncoder/: AIbasic.py  premanage.py
src/Debug/: setup.py
src/Debug/Debug/: Debug.py
src/commandencoder/: premanage.py
